# koto-voe

./: .gitignore  Cargo.toml  README.md
kotovoe-backend/: Cargo.toml
kotovoe-backend/src/: main.rs
kotovoe-front/: Cargo.toml  Dioxus.toml
kotovoe-front/src/: apps.rs  main.rs  server_api.rs  shared.rs
kotovoe-front/src/components/: card.rs  mod.rs  navbar.rs
kotovoe-front/src/pages/: auth.rs  favorite.rs  home.rs  mod.rs  topcat.rs
