[package]
name = "kotovoe-backend"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = {version = "0.8.4", features = ["tokio"]}
serde = {version = "1.0.219",features = ["derive"]}
tokio = {version= "1.45.1", features = ["full"]}
sqlx = { version = "0.7", features = ["runtime-tokio-native-tls", "postgres", "macros", "chrono"] }
dotenv = "0.15"
base64 = "0.22.1"
chrono = {version = "0.4.41", features = ["serde"]}
uuid = { version = "1", features = ["v4"] }
axum-extra = { version = "0.10.1", features = ["cookie","typed-header"] }
time = "0.3"
serde_json = "1.0.140"
tower-http = { version = "0.6", features = ["cors","trace"] }
jsonwebtoken = "9"  # для JWT
sha2 = "0.10" 
cookie = "0.18"
async-trait = "0.1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }
argon2 = { version = "0.5", features = ["std", "password-hash", "alloc"] }
rand = { version = "0.8", features = ["std", "std_rng"] }