[package]
name = "kotovoe-front"
version = "0.1.0"
authors = ["IriaKoticov <mrdidnew@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dioxus = { version = "0.6.0", features = ["router", "fullstack"] }
reqwest = { version = "0.12.15", features = ["json"]}
serde = { version = "1.0.219", features = ["derive"] }
gloo-timers = { version = "0.2", features = ["futures"]}
serde_json = "1.0.140"
gloo-net = "0.6.0"
gloo-storage = "0.3.0"
log = "0.4.27"
console_log = "1.0" 
web-sys = { version = "0.3", features = ['Window', 'Document'] }


[features]
default = ["web"]
web = ["dioxus/web"]
desktop = ["dioxus/desktop"]
mobile = ["dioxus/mobile"]

[profile.wasm-dev]
inherits = "dev"
opt-level = 1

[profile.server-dev]
inherits = "dev"

[profile.android-dev]
inherits = "dev"
